--- a/src/app.postcss
+++ b/src/app.postcss
@@ -10,3 +10,13 @@ html, body {
 .text-justify {
     text-align: justify;
 }
+
+body {
+    background-image:
+            radial-gradient(at 0% 0%, rgba(var(--color-secondary-500) / 0.33) 0px, transparent 50%),
+            radial-gradient(at 91% 11%, rgba(var(--color-primary-500) / 0.33) 0px, transparent 50%);
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
