fix: add dark mode styling for Flatpickr

--- a/src/app.postcss
+++ b/src/app.postcss
@@ -1,7 +1,10 @@
+@import "css/flatpickr.postcss";
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 @tailwind variants;
+
 
 html, body {
     @apply h-full;
@@ -120,4 +123,8 @@ h1 {
     .light-logo {
         @apply block;
     }
+}
+
+:root {
+    color-scheme: light dark;
 }
