--- a/src/app.postcss
+++ b/src/app.postcss
@@ -1,130 +1,9 @@
 @import "css/flatpickr.postcss";
+@import "css/stats.postcss";
+@import "css/logos.postcss";
+@import "css/global.postcss";
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 @tailwind variants;
-
-
-html, body {
-    @apply h-full;
-}
-
-.text-justify {
-    text-align: justify;
-}
-
-body {
-    background-image: radial-gradient(at 0% 0%, rgba(var(--color-secondary-500) / 0.33) 0px, transparent 50%),
-    radial-gradient(at 91% 11%, rgba(var(--color-primary-500) / 0.33) 0px, transparent 50%);
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-
-h1 {
-    @apply my-2
-}
-
-/* DaisyUI stats component adapted */
-
-@layer components {
-    .stats {
-        @apply inline-grid;
-    }
-
-    :where(.stats) {
-        @apply grid-flow-col;
-    }
-
-    .stat {
-        @apply inline-grid w-full;
-        grid-template-columns: repeat(1, 1fr);
-
-        .stat-figure {
-            @apply col-start-2 row-span-3 row-start-1 place-self-center justify-self-end;
-        }
-
-        .stat-title {
-            @apply col-start-1 whitespace-nowrap;
-        }
-
-        .stat-value {
-            @apply col-start-1 whitespace-nowrap;
-        }
-
-        .stat-desc {
-            @apply col-start-1 whitespace-nowrap;
-        }
-
-        .stat-actions {
-            @apply col-start-1 whitespace-nowrap;
-        }
-    }
-
-    :where(.stats) {
-        @apply divide-x divide-y-0 overflow-x-auto;
-    }
-
-    :is([dir="rtl"] .stats > :not([hidden]) ~ :not([hidden])) {
-        --tw-divide-x-reverse: 1;
-    }
-
-    .stat {
-        @apply gap-x-4 border-opacity-10 px-6 py-4;
-
-        .stat-title {
-            @apply text-surface-600-300-token;
-        }
-
-        .stat-value {
-            @apply text-4xl font-extrabold;
-        }
-
-        .stat-desc {
-            @apply text-surface-600-300-token text-xs;
-        }
-
-        .stat-actions {
-            @apply mt-4;
-        }
-    }
-
-    .stats-horizontal {
-        @apply grid-flow-col;
-    }
-
-    .stats-vertical {
-        @apply grid-flow-row;
-    }
-
-    .stats-horizontal {
-        @apply divide-x divide-y-0 overflow-x-auto rtl:[--tw-divide-x-reverse:1];
-    }
-
-    .stats-vertical {
-        @apply divide-x-0 divide-y overflow-y-auto;
-    }
-}
-
-/** Applies to all logos that have different variants for dark and light mode. */
-.dark {
-    .dark-logo {
-        @apply hidden;
-    }
-}
-
-.light-logo {
-    @apply hidden;
-}
-
-.dark {
-    .light-logo {
-        @apply block;
-    }
-}
-
-:root {
-    color-scheme: light dark;
-}
