--- a/src/app.css
+++ b/src/app.css
@@ -1,9 +1,29 @@
-@import "css/flatpickr.css";
-@import "css/stats.css";
-@import "css/logos.css";
-@import "css/global.css";
+@import './css/flatpickr.css' layer(base);
+@import './css/stats.css';
+@import './css/logos.css' layer(base);
+@import './css/global.css' layer(base);
 
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-@tailwind variants;
+@import 'tailwindcss';
+
+@config '../tailwind.config.ts';
+
+/*
+  The default border color has changed to `currentcolor` in Tailwind CSS v4,
+  so we've added these compatibility styles to make sure everything still
+  looks the same as it did with Tailwind CSS v3.
+
+  If we ever want to remove these styles, we need to add an explicit border
+  color utility to any element that depends on these defaults.
+*/
+@layer base {
+  *,
+  ::after,
+  ::before,
+  ::backdrop,
+  ::file-selector-button {
+    border-color: var(--color-gray-200, currentcolor);
+  }
+}
+
+@layer utilities {
+}
