--- a/src/css/flatpickr.css
+++ b/src/css/flatpickr.css
@@ -13,7 +13,7 @@
 }
 
 .flatpickr-time {
-    @apply text-surface-500-400-token !important;
+    @apply text-surface-500-400-token!;
 }
 
 span.flatpickr-weekday {
@@ -34,10 +34,10 @@ span.flatpickr-weekday {
 }
 
 .flatpickr-months .flatpickr-prev-month, .flatpickr-months .flatpickr-next-month {
-    @apply fill-token !important;
-    @apply text-surface-900-50-token !important;
+    @apply fill-token!;
+    @apply text-surface-900-50-token!;
 }
 
 .flatpickr-day.inRange, .flatpickr-day.prevMonthDay.inRange, .flatpickr-day.nextMonthDay.inRange, .flatpickr-day.today.inRange, .flatpickr-day.prevMonthDay.today.inRange, .flatpickr-day.nextMonthDay.today.inRange, .flatpickr-day:hover, .flatpickr-day.prevMonthDay:hover, .flatpickr-day.nextMonthDay:hover, .flatpickr-day:focus, .flatpickr-day.prevMonthDay:focus, .flatpickr-day.nextMonthDay:focus {
-    @apply bg-surface-100-800-token !important;
+    @apply bg-surface-100-800-token!;
 }
