--- a/src/app.css
+++ b/src/app.css
@@ -9,9 +9,7 @@
 
 @import "@skeletonlabs/skeleton/optional/presets";
 
-/*
-  Add your theme import for your theme: "skylarksTheme" here
-*/
+@import "../skylarks-theme.css";
 
 @source "../node_modules/@skeletonlabs/skeleton-svelte/dist";
 
