--- a/src/app.css
+++ b/src/app.css
@@ -5,15 +5,18 @@
 
 @import 'tailwindcss';
 
+@import "tw-animate-css";
+
 @import "@skeletonlabs/skeleton";
 
 @import "@skeletonlabs/skeleton/optional/presets";
 
 @import "../skylarks-theme.css";
 
-@source "../node_modules/@skeletonlabs/skeleton-svelte/dist";
+@plugin '@tailwindcss/forms';
+@plugin "@tailwindcss/typography";
 
-@config '../tailwind.config.ts';
+@source "../node_modules/@skeletonlabs/skeleton-svelte/dist";
 
 /*
   The default border color has changed to `currentcolor` in Tailwind CSS v4,
