--- a/src/css/global.css
+++ b/src/css/global.css
@@ -6,7 +6,7 @@ html, body {
     text-align: justify;
 }
 
-body {
+[data-theme='skylarks'] body {
     background-image: radial-gradient(at 0% 0%, rgba(var(--color-secondary-500) / 0.33) 0px, transparent 50%),
     radial-gradient(at 91% 11%, rgba(var(--color-primary-500) / 0.33) 0px, transparent 50%);
     background-attachment: fixed;
