fix: manual fixes for signup/login page

--- a/src/css/logos.css
+++ b/src/css/logos.css
@@ -1,16 +1,18 @@
 /** Applies to all logos that have different variants for dark and light mode. */
-.dark {
+@media (prefers-color-scheme: dark) {
     .dark-logo {
         @apply hidden;
     }
-}
-
-.light-logo {
-    @apply hidden;
-}
-
-.dark {
     .light-logo {
+        @apply block;
+    }
+}
+
+@media (prefers-color-scheme: light) {
+    .light-logo {
+        @apply hidden;
+    }
+    .dark-logo {
         @apply block;
     }
 }
