--- a/src/app.css
+++ b/src/app.css
@@ -1,6 +1,7 @@
-@import './css/flatpickr.css' layer(base);
-@import './css/stats.css';
-@import './css/logos.css' layer(base);
+@import './css/partials/flatpickr.css' layer(base);
+@import './css/partials/stats.css';
+@import './css/partials/logos.css' layer(base);
+@import './css/partials/linescore.css' layer(base);
 @import './css/global.css' layer(base);
 
 @import 'tailwindcss';
