--- a/src/app.css
+++ b/src/app.css
@@ -3,6 +3,7 @@
 @import './css/partials/logos.css' layer(base);
 @import './css/partials/linescore.css' layer(base);
 @import './css/partials/card.css';
+@import './css/presets.css';
 @import './css/global.css' layer(base);
 
 @import 'tailwindcss';
