refactor: adjust global styles for menus, navbars, drawers and bottom navigation

--- a/skylarks-theme.css
+++ b/skylarks-theme.css
@@ -32,7 +32,7 @@
     --default-border-width: 1px;
     --default-divide-width: 1px;
     --default-ring-width: 1px;
-    --body-background-color: var(--color-surface-50);
+    --body-background-color: oklch(1 0 0 / 1);
     --body-background-color-dark: var(--color-surface-950);
     --color-primary-50: oklch(91.41% 0.03 4.62deg);
     --color-primary-100: oklch(81.28% 0.07 4.73deg);
@@ -90,9 +90,9 @@
     --color-tertiary-500: oklch(78.95% 0.07 86.52deg);
     --color-tertiary-600: oklch(72.85% 0.06 86.28deg);
     --color-tertiary-700: oklch(66.61% 0.06 85.98deg);
-    --color-tertiary-800: oklch(60.54% 0.05 86.17deg);
-    --color-tertiary-900: oklch(53.99% 0.05 85.75deg);
-    --color-tertiary-950: oklch(47.24% 0.04 85.18deg);
+    --color-tertiary-800: oklch(60.56% 0.05 85.6deg);
+    --color-tertiary-900: oklch(54.01% 0.05 85.08deg);
+    --color-tertiary-950: oklch(47.26% 0.04 84.35deg);
     --color-tertiary-contrast-dark: var(--color-tertiary-950);
     --color-tertiary-contrast-light: var(--color-tertiary-50);
     --color-tertiary-contrast-50: var(--color-tertiary-contrast-dark);
@@ -109,14 +109,14 @@
     --color-success-50: oklch(96.1% 0.04 122.61deg);
     --color-success-100: oklch(91.87% 0.08 125.04deg);
     --color-success-200: oklch(87.98% 0.12 126.7deg);
-    --color-success-300: oklch(84.08% 0.15 127.54deg);
-    --color-success-400: oklch(80.51% 0.18 129.15deg);
-    --color-success-500: oklch(76.91% 0.2 130.94deg);
+    --color-success-300: oklch(84.09% 0.15 127.64deg);
+    --color-success-400: oklch(80.52% 0.18 129.21deg);
+    --color-success-500: oklch(76.91% 0.2 130.97deg);
     --color-success-600: oklch(70.93% 0.19 130.88deg);
     --color-success-700: oklch(64.88% 0.17 130.55deg);
     --color-success-800: oklch(58.88% 0.15 130.58deg);
     --color-success-900: oklch(52.53% 0.14 130.09deg);
-    --color-success-950: oklch(45.91% 0.12 129.83deg);
+    --color-success-950: oklch(45.91% 0.12 129.77deg);
     --color-success-contrast-dark: var(--color-success-950);
     --color-success-contrast-light: var(--color-success-50);
     --color-success-contrast-50: var(--color-success-contrast-dark);
@@ -136,11 +136,11 @@
     --color-warning-300: oklch(85.94% 0.13 90.58deg);
     --color-warning-400: oklch(82.66% 0.15 88.89deg);
     --color-warning-500: oklch(79.54% 0.16 85.76deg);
-    --color-warning-600: oklch(73.46% 0.15 86.2deg);
+    --color-warning-600: oklch(73.56% 0.15 85.74deg);
     --color-warning-700: oklch(67.35% 0.14 86.19deg);
-    --color-warning-800: oklch(60.78% 0.12 86.06deg);
+    --color-warning-800: oklch(60.9% 0.12 85.47deg);
     --color-warning-900: oklch(54.36% 0.11 86.07deg);
-    --color-warning-950: oklch(47.62% 0.1 87.06deg);
+    --color-warning-950: oklch(47.74% 0.1 86.28deg);
     --color-warning-contrast-dark: var(--color-warning-950);
     --color-warning-contrast-light: var(--color-warning-50);
     --color-warning-contrast-50: var(--color-warning-contrast-dark);
