--- a/src/app.css
+++ b/src/app.css
@@ -19,6 +19,7 @@
 @import './css/partials/buttons.css' layer(utilities);
 @import './css/partials/card.css';
 @import './css/presets.css';
+@import './css/overrides.css';
 @import './css/global.css' layer(utilities);
 
 /*
