--- a/src/app.css
+++ b/src/app.css
@@ -18,6 +18,7 @@
 @import './css/partials/linescore.css' layer(base);
 @import './css/partials/buttons.css' layer(utilities);
 @import './css/partials/card.css';
+@import './css/partials/tabs.css' layer(utilities);
 @import './css/presets.css';
 @import './css/overrides.css';
 @import './css/global.css' layer(utilities);
