fix: use default background for charts

--- a/src/css/overrides.css
+++ b/src/css/overrides.css
@@ -14,3 +14,10 @@
         border-color: var(--color-surface-500)
     }
 }
+
+/**
+  * We do not want the default background colors
+  */
+.apexcharts-svg {
+    background: none !important;
+}
