--- a/src/css/partials/tabs.css
+++ b/src/css/partials/tabs.css
@@ -1,6 +1,6 @@
 .tabs-list {
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     flex-wrap: wrap;
     border-radius: var(--radius-container);
     gap: calc(var(--spacing) * 1);
