--- a/src/css/overrides.css
+++ b/src/css/overrides.css
@@ -13,7 +13,8 @@
     .preset-tonal-surface {
         background-color: var(--color-surface-800);
         color: var(--color-surface-contrast-800);
-        @apply border;
+        border-style: var(--tw-border-style);
+        border-width: 1px;
         border-color: var(--color-surface-500)
     }
 }
