--- a/src/css/partials/stats.css
+++ b/src/css/partials/stats.css
@@ -1,69 +1,130 @@
 /* DaisyUI stats component adapted */
 
-@utility stats {
-  @apply inline-grid;
+.stats {
+    display: inline-grid;
 
-  :where(&) {
-    @apply grid-flow-col;
-  }
+    :where(&) {
+        grid-auto-flow: column;
+    }
 
-  :where(&) {
-    @apply divide-x divide-y-0 overflow-x-auto;
-  }
+    :where(&) {
+        :where(& > :not(:last-child)) {
+            --tw-divide-x-reverse: 0;
+            border-inline-style: var(--tw-border-style);
+            border-inline-start-width: calc(1px * var(--tw-divide-x-reverse));
+            border-inline-end-width: calc(1px * calc(1 - var(--tw-divide-x-reverse)));
+        }
 
-  :is([dir='rtl'] & > :not([hidden]) ~ :not([hidden])) {
-    --tw-divide-x-reverse: 1;
-  }
+        :where(& > :not(:last-child)) {
+            --tw-divide-y-reverse: 0;
+            border-bottom-style: var(--tw-border-style);
+            border-top-style: var(--tw-border-style);
+            border-top-width: calc(0px * var(--tw-divide-y-reverse));
+            border-bottom-width: calc(0px * calc(1 - var(--tw-divide-y-reverse)));
+        }
+
+        overflow-x: auto;
+    }
+
+    :is([dir='rtl'] & > :not([hidden]) ~ :not([hidden])) {
+        --tw-divide-x-reverse: 1;
+    }
 }
 
-@utility stat {
-  @apply inline-grid w-full;
-  grid-template-columns: repeat(1, 1fr);
+.stat {
+    display: inline-grid;
+    width: 100%;
+    grid-template-columns: repeat(1, 1fr);
 
-  .stat-figure {
-    @apply col-start-2 row-span-3 row-start-1 place-self-center justify-self-end;
-  }
+    .stat-figure {
+        grid-column-start: 2;
+        grid-row: span 3 / span 3;
+        grid-row-start: 1;
+        place-self: center;
+        justify-self: flex-end;
+    }
 
-  .stat-title {
-    @apply col-start-1 whitespace-nowrap;
-  }
+    .stat-title {
+        grid-column-start: 1;
+        white-space: nowrap;
+    }
 
-  .stat-value {
-    @apply col-start-1 whitespace-nowrap;
-  }
+    .stat-value {
+        grid-column-start: 1;
+        white-space: nowrap;
+    }
 
-  .stat-desc {
-    @apply col-start-1 whitespace-nowrap;
-  }
+    .stat-desc {
+        grid-column-start: 1;
+        white-space: nowrap;
+    }
 
-  .stat-actions {
-    @apply col-start-1 whitespace-nowrap;
-  }
-  @apply gap-x-4 px-6 py-4;
+    .stat-actions {
+        grid-column-start: 1;
+        white-space: nowrap;
+    }
 
-  .stat-title {
-    @apply text-surface-700-300;
-  }
+    column-gap: calc(var(--spacing) * 4);
+    padding-inline: calc(var(--spacing) * 6);
+    padding-block: calc(var(--spacing) * 4);
 
-  .stat-value {
-    @apply text-4xl font-extrabold;
-  }
+    .stat-title {
+        color: light-dark(var(--color-surface-700), var(--color-surface-300));
+    }
 
-  .stat-desc {
-    @apply text-surface-700-300 text-xs;
-  }
+    .stat-value {
+        font-size: calc(2.25rem/* 36px */ * var(--text-scaling)) /* 2.25rem = 36px */;
+        line-height: var(--tw-leading, calc(calc(2.5 / 2.25) var(--text-scaling)));
+        --tw-font-weight: var(--font-weight-extrabold);
+        font-weight: var(--font-weight-extrabold);
+    }
 
-  .stat-actions {
-    @apply mt-4;
-  }
+    .stat-desc {
+        color: light-dark(var(--color-surface-700) , var(--color-surface-300));
+        font-size: calc(0.75rem * var(--text-scaling));
+        line-height: var(--tw-leading, calc(calc(1 / 0.75)  * var(--text-scaling)));
+    }
+
+    .stat-actions {
+        margin-top: calc(var(--spacing) * 4)
+    }
 }
 
-@utility stats-horizontal {
-  @apply grid-flow-col;
-  @apply divide-x divide-y-0 overflow-x-auto rtl:[--tw-divide-x-reverse:1];
+.stats-horizontal {
+    grid-auto-flow: column;
+    :where(& > :not(:last-child)) {
+        --tw-divide-x-reverse: 0;
+        border-inline-style: var(--tw-border-style);
+        border-inline-start-width: calc(1px * var(--tw-divide-x-reverse));
+        border-inline-end-width: calc(1px * calc(1 - var(--tw-divide-x-reverse)));
+        :where(& > :not(:last-child)) {
+            --tw-divide-y-reverse: 0;
+            border-bottom-style: var(--tw-border-style);
+            border-top-style: var(--tw-border-style);
+            border-top-width: calc(0px * var(--tw-divide-y-reverse));
+            border-bottom-width: calc(0px * calc(1 - var(--tw-divide-y-reverse)));
+        }
+        overflow-x: auto;
+        &:where(:dir(rtl), [dir="rtl"], [dir="rtl"] *) {
+            --tw-divide-x-reverse: 1;
+        }
+    }
 }
 
-@utility stats-vertical {
-  @apply grid-flow-row;
-  @apply divide-x-0 divide-y overflow-y-auto;
+.stats-vertical {
+    grid-auto-flow: row;
+    :where(& > :not(:last-child)) {
+        --tw-divide-x-reverse: 0;
+        border-inline-style: var(--tw-border-style);
+        border-inline-start-width: calc(0px * var(--tw-divide-x-reverse));
+        border-inline-end-width: calc(0px * calc(1 - var(--tw-divide-x-reverse)));
+    }
+    :where(& > :not(:last-child)) {
+        --tw-divide-y-reverse: 0;
+        border-bottom-style: var(--tw-border-style);
+        border-top-style: var(--tw-border-style);
+        border-top-width: calc(1px * var(--tw-divide-y-reverse));
+        border-bottom-width: calc(1px * calc(1 - var(--tw-divide-y-reverse)));
+    }
+    overflow-y: auto;
 }
